--- a/index.html
+++ b/index.html
@@ -12,5 +12,12 @@
         <img src="img/Logo.png" alt="logo Toboolist">
         <h1>Toboolist</h1>
     </header>
+    <main>
+        <section class="top-button">
+            <button class="blue-button">Add Task</button>
+            <button class="white-button">Add Section</button>
+        </section>
+        
+    </main>
 </body>
 </html>
