--- a/index.html
+++ b/index.html
@@ -17,7 +17,26 @@
             <button class="blue-button">Add Task</button>
             <button class="white-button">Add Section</button>
         </section>
-        
+        <section class="to-do-list">
+            <div class="new-task">
+                <h3>&dtrif; New Task</h3>
+                <p><span class="check">&check;</span> Quarterly Newsletter <span class="tag editorial">Editorial</span></p>
+            </div>
+            <div class="today">
+                <h3>&dtrif; Today</h3>
+                <p><span class="check">&check;</span> Recruiting blog post <span class="tag editorial">Editorial</span></p>
+                <p><span class="check">&check;</span> Mobile app launch <span class="tag q1">Q1 Goals</span></p>
+                <p><span class="cross">&cross;</span> Interview John H. <span class="tag recruiting">Recruiting</span></p>
+                <p><span class="check">&check;</span> Summit update to mobile storefronts <span class="tag mobile">Mobile</span></p>
+            </div>
+            <div class="upcoming">
+                <h3>&dtrif; Upcoming</h3>
+                <p><span class="cross">&cross;</span> Schedule meetting with Alex <span class="tag editorial">Editorial</span></p>
+                <p><span class="check">&check;</span> Homepage refresh <span class="tag website">Website</span></p>
+                <p><span class="cross">&cross;</span> Onboard new Sales team members <span class="tag sales">Sales</span></p>
+                <p><span class="check">&check;</span> REview editorial calendar <span class="tag editorial">Editorial</span></p>
+            </div>
+        </section>
     </main>
 </body>
 </html>
