--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <p><span class="cross">&cross;</span> Schedule meetting with Alex <span class="tag editorial">Editorial</span></p>
                 <p><span class="check">&check;</span> Homepage refresh <span class="tag website">Website</span></p>
                 <p><span class="cross">&cross;</span> Onboard new Sales team members <span class="tag sales">Sales</span></p>
-                <p><span class="check">&check;</span> REview editorial calendar <span class="tag editorial">Editorial</span></p>
+                <p><span class="check">&check;</span> Review editorial calendar <span class="tag editorial">Editorial</span></p>
             </div>
         </section>
     </main>
